--- a/action.yml
+++ b/action.yml
@@ -14,6 +14,9 @@ inputs:
   review-message:
     description: '(optional) The message of the pull request review.'
     required: false
+  reviewer:
+    description: '(optional) Team reviewer name'
+    required: false
 runs:
   using: 'node12'
   main: 'dist/index.js'
